--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -109,3 +109,36 @@ body {
     background: #d70015;
   }
 }
+
+/* ----------------------------- simply carousel ---------------------------- */
+
+.simply-carousel .ant-carousel .slick-prev,
+.simply-carousel .ant-carousel .slick-next {
+  z-index: 2;
+  color: #d70015;
+
+  width: 50px;
+  height: 50px;
+
+  margin: 0px -20px;
+
+  &::after {
+    /* ---------------------------------- arrow --------------------------------- */
+    top: 40%;
+    left: 40%;
+  }
+}
+.simply-carousel .ant-carousel .slick-dots li button {
+  background: gainsboro;
+  opacity: 1;
+}
+.simply-carousel .ant-carousel .slick-dots li.slick-active {
+  width: 30px;
+  height: 5px; /* space below dot */
+
+  &::after {
+    width: 30px !important; /* main width */
+    height: 4px; /* size dot */
+    background: #d70015;
+  }
+}
